[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/technical/enemy_states/node_state_manager.gd" type="Script" id=1]
[ext_resource path="res://src/technical/enemy_states/state_hunting.gd" type="Script" id=2]
[ext_resource path="res://src/technical/enemy_states/state_attack.gd" type="Script" id=3]
[ext_resource path="res://src/technical/enemy_states/state_hurt.gd" type="Script" id=4]
[ext_resource path="res://src/technical/enemy_states/state_dying.gd" type="Script" id=5]
[ext_resource path="res://src/technical/enemy_states/state_idle.gd" type="Script" id=6]
[ext_resource path="res://src/technical/enemy_states/state_roaming.gd" type="Script" id=7]
[ext_resource path="res://src/technical/enemy_states/state_searching.gd" type="Script" id=8]
[ext_resource path="res://src/technical/enemy_states/state_scanning.gd" type="Script" id=9]

[node name="StateManager" type="Node2D"]
script = ExtResource( 1 )

[node name="State_Idle" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="State_Roaming" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="State_Searching" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="State_Hunting" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="State_Attack" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="State_Hurt" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="State_Dying" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="State_Scanning" type="Node2D" parent="."]
script = ExtResource( 9 )
